[package]
name = "warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",  features = ["v1_18"] }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-plugin-fmp4 = { git = "https://github.com/sdroege/gst-plugin-rs", version = "0.12.0-alpha.1" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-pbutils = { package = "gstreamer-pbutils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
gst-sys = { package = "gstreamer-sys", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
toml_datetime = "0.6.5"
url = "2.5.0"

quinn = "0.10"
webtransport-quinn = "0.6.1"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
rustls-pemfile = "1"
tokio = {version="1.35.1", features = ["full"]}
env_logger = "0.9"
log = { version = "0.4", features = ["std"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
mp4 = "0.13"
moq-transport = { git = "https://github.com/kixelated/moq-rs", version = "0.2.0" }
serde_json = "1"
rfc6381-codec = "0.1"
